post and like model with relationships implemented
