# src/controllers/UserController.ts
@@ -1,27 +1,27 @@
-import { Get, Route, Tags, Post, Body, Path } from "tsoa";
-import { User } from "../models";
-import {
-  getUsers,
-  createUser,
-  IUserPayload2,
-  getUser,
-} from "../repositories/user";
+// import { Get, Route, Tags, Post, Body, Path } from "tsoa";
+// import { User } from "../models";
+// import {
+//   getUsers,
+//   createUser,
+//   IUserPayload2,
+//   getUser,
+// } from "../repositories/user";
 
-@Route("users")
-@Tags("User")
-export default class UserController {
-  @Get("/")
-  public async getUsers(): Promise<Array<User>> {
-    return getUsers();
-  }
+// @Route("users")
+// @Tags("User")
+// export default class UserController {
+//   @Get("/")
+//   public async getUsers(): Promise<Array<User>> {
+//     return getUsers();
+//   }
 
-  @Post("/")
-  public async createUser(@Body() body: IUserPayload2): Promise<User> {
-    return createUser(body);
-  }
+//   @Post("/")
+//   public async createUser(@Body() body: IUserPayload2): Promise<User> {
+//     return createUser(body);
+//   }
 
-  @Get("/:id")
-  public async getUser(@Path() id: string): Promise<User | null> {
-    return getUser(Number(id));
-  }
-}
+//   @Get("/:id")
+//   public async getUser(@Path() id: string): Promise<User | null> {
+//     return getUser(Number(id));
+//   }
+// }
